@@ -1,5 +1,10 @@
 2015-09-14  Niels Möller  <nisse@lysator.liu.se>
 
+	* rsa-sign-tr.c (rsa_blind, rsa_unblind): Moved here, made static,
+	dropped leading underscore.
+	* rsa-blind.c: Deleted file.
+	* rsa.h: Deleted coresponding declarations.
+
 	* rsa-decrypt-tr.c (rsa_decrypt_tr): Use rsa_compute_root_tr.
 	Mainly for simplicity and consistency, I'm not aware of any CRT
 	fault attacks on RSA decryption.
